# comfyui-bigplayer-llm-nodes

./: .gitignore  AGENTS.md  PROJECT_BRIEF.md  README.md  __init__.py  package-lock.json  package.json  playwright.config.mjs  pyproject.toml
bigplayer/: __init__.py
bigplayer/generation/: capabilities.py  schemas.py  service.py  status.py
bigplayer/nodes/: __init__.py  _common.py
bigplayer/nodes/prompting/: __init__.py  checkpoint_picker.py  llm_provider.py  natural_language_root.py  prompt_debug.py
bigplayer/providers/: __init__.py  base.py  no_provider.py  registry.py  xai.py
bigplayer_prompting/: cache.py  capabilities.py  errors.py  model_name.py  nodes.py  operations.py  preset.py  prompts.py  provider.py  schemas.py  service.py  status.py
bigplayer_prompting/generation/: __init__.py  cache.py  capabilities.py  service.py
bigplayer_prompting/nodes/: __init__.py
bigplayer_prompting/providers/: __init__.py  base.py  no_provider.py  xai.py
bigplayer_prompting/state/: __init__.py  model_name.py  preset.py
docs/: simple-prompt-node.md  split-prompt-node.md  structure-definitions.md
tests/: comfyui_runtime.py  conftest.py
tests/integration/: conftest.py  test_comfyui_integration.py
tests/ui/: cleanup_comfyui.py  global_teardown.mjs  node_wiring.spec.js  serve_comfyui.py  server_state.mjs
tests/unit/: test_live_provider.py  test_model_name.py  test_no_provider.py  test_preset.py  test_provider.py  test_provider_registry.py  test_root_loader.py  test_schemas.py  test_service.py
web/: bigplayer_ui.js  dynamic_provider_models.js
(+12 files in other folders)
